--- a/employee-service.properties
+++ b/employee-service.properties
@@ -12,5 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8080
 
 # Eureka client register in the Eureka server
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
 management.endpoints.web.exposure.include=shutdown
 management.endpoint.shutdown.enabled=true
