--- a/employee-service.properties
+++ b/employee-service.properties
@@ -16,3 +16,5 @@ eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 management.endpoints.web.exposure.include=shutdown
 management.endpoint.shutdown.enabled=true
+
+spring.cloud.message= Hello, Employee Service
