--- a/employee-service.properties
+++ b/employee-service.properties
@@ -17,4 +17,4 @@ eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 management.endpoints.web.exposure.include=shutdown
 management.endpoint.shutdown.enabled=true
 
-spring.cloud.message= Hello, Employee Service
+spring.cloud.message= Hello, Employee Service Updated
