--- a/employee-service.properties
+++ b/employee-service.properties
@@ -14,7 +14,10 @@ server.port=8080
 # Eureka client register in the Eureka server
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-management.endpoints.web.exposure.include=shutdown
+#Expose required actuator endpoints
+management.endpoints.web.exposure.include=refresh,shutdown
+
+# Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
 
 spring.cloud.message= Hello, Employee Service Updated
