--- a/department-service.properties
+++ b/department-service.properties
@@ -13,5 +13,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #URL Link with Eureka server 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-management.endpoints.web.exposure.include=shutdown
+spring.cloud.message= Hello, Department Service
+
+#Expose required actuator endpoints
+management.endpoints.web.exposure.include=refresh,shutdown
+
+# Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
