--- a/department-service.properties
+++ b/department-service.properties
@@ -20,3 +20,13 @@ management.endpoints.web.exposure.include=refresh,shutdown
 
 # Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
+
+# =====================================================
+# RabbitMQ Connection Configuration
+# =====================================================
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=nova81
+spring.rabbitmq.password=Aadhi@123
+
