Add RabbitMQ connection settings
Added RabbitMQ connection configuration to properties.

--- a/employee-service.properties
+++ b/employee-service.properties
@@ -21,3 +21,13 @@ management.endpoints.web.exposure.include=refresh,shutdown
 management.endpoint.shutdown.enabled=true
 
 spring.cloud.message= Hello, Employee Service Updated
+
+# =====================================================
+# RabbitMQ Connection Configuration
+# =====================================================
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=nova81
+spring.rabbitmq.password=Aadhi@123
+
