Update spring.cloud.message for service demo

--- a/employee-service.properties
+++ b/employee-service.properties
@@ -20,7 +20,7 @@ management.endpoints.web.exposure.include=refresh,shutdown
 # Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
 
-spring.cloud.message= Hello, Employee Service Updated
+spring.cloud.message= Hello, Employee Service Spring Cloud Bus Demo
 
 # =====================================================
 # RabbitMQ Connection Configuration
