Change RabbitMQ host from localhost to rabbitmq

--- a/department-service.properties
+++ b/department-service.properties
@@ -25,7 +25,7 @@ management.endpoint.shutdown.enabled=true
 # RabbitMQ Connection Configuration
 # =====================================================
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=nova81
 spring.rabbitmq.password=Aadhi@123
