--- a/employee-service.properties
+++ b/employee-service.properties
@@ -31,3 +31,4 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=nova81
 spring.rabbitmq.password=Aadhi@123
 
+spring.rabbitmq.connection-timeout=30000
