--- a/employee-service.properties
+++ b/employee-service.properties
@@ -15,7 +15,7 @@ server.port=8080
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 #Expose required actuator endpoints
-management.endpoints.web.exposure.include=refresh,shutdown
+management.endpoints.web.exposure.include=refresh,shutdown,busrefresh
 
 # Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
