--- a/department-service.properties
+++ b/department-service.properties
@@ -16,7 +16,7 @@ eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 spring.cloud.message= Hello, Department Service
 
 #Expose required actuator endpoints
-management.endpoints.web.exposure.include=refresh,shutdown
+management.endpoints.web.exposure.include=refresh,shutdown,busrefresh
 
 # Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
