--- a/department-service.properties
+++ b/department-service.properties
@@ -17,7 +17,7 @@ spring.cloud.message= Hello, Department Service
 
 #Expose required actuator endpoints
 management.endpoints.web.exposure.include=refresh,shutdown,busrefresh
-
+management.endpoint.busrefresh.enabled=true
 # Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
 
