--- a/employee-service.properties
+++ b/employee-service.properties
@@ -16,6 +16,7 @@ eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 #Expose required actuator endpoints
 management.endpoints.web.exposure.include=refresh,shutdown,busrefresh
+management.endpoint.busrefresh.enabled=true
 
 # Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
