Change RabbitMQ host to localhost

--- a/employee-service.properties
+++ b/employee-service.properties
@@ -27,7 +27,7 @@ spring.cloud.message= Hello, Employee Service Spring Cloud Bus Demo
 # RabbitMQ Connection Configuration
 # =====================================================
 
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=nova81
 spring.rabbitmq.password=Aadhi@123
