--- a/department-service.properties
+++ b/department-service.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #URL Link with Eureka server 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.cloud.message= Hello, Department Service
+spring.cloud.message= Hello, Department Service Spring cloud bus demo
 
 #Expose required actuator endpoints
 management.endpoints.web.exposure.include=refresh,shutdown,busrefresh
