--- a/employee-service.properties
+++ b/employee-service.properties
@@ -21,7 +21,7 @@ management.endpoint.busrefresh.enabled=true
 # Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
 
-spring.cloud.message= Hello, Employee Service Spring Cloud Bus Demo
+spring.cloud.message= Hello, Employee Service Spring Cloud Bus Demo1
 
 # =====================================================
 # RabbitMQ Connection Configuration
