--- a/employee-service.properties
+++ b/employee-service.properties
@@ -13,6 +13,7 @@ server.port=8080
 
 # Eureka client register in the Eureka server
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 
 #Expose required actuator endpoints
 management.endpoints.web.exposure.include=refresh,shutdown,busrefresh
