--- a/department-service.properties
+++ b/department-service.properties
@@ -12,6 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #URL Link with Eureka server 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 
 spring.cloud.message= Hello, Department Service Spring cloud bus demo
 
