--- a/department-service.properties
+++ b/department-service.properties
@@ -9,6 +9,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# ===============================
+# Distributed Tracing (Zipkin + Sleuth) Configuration
+# ===============================
+spring.zipkin.base-url=http://127.0.0.1:9411
+spring.sleuth.sample.probability=1.0
 
 #URL Link with Eureka server 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
