Add Zipkin and Sleuth configuration
Added configuration for Zipkin and Sleuth tracing.

--- a/employee-service.properties
+++ b/employee-service.properties
@@ -11,6 +11,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 server.port=8080
 
+# ===============================
+# Distributed Tracing (Zipkin + Sleuth) Configuration
+# ===============================
+spring.zipkin.base-url=http://127.0.0.1:9411
+spring.sleuth.sample.probability=1.0
+
+
 # Eureka client register in the Eureka server
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
