--- a/employee-service.properties
+++ b/employee-service.properties
@@ -37,6 +37,24 @@ spring.cloud.message= Hello, Employee Service Spring Cloud Bus Demo
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
+
+# Circuit Breaker & Actuator Health Configuration
+
+# Actuator endpoint for Circuit Breaker
+management.health.circuitbreaker.enabled=true
+management.endpoint.web.exposure.include=health
+management.endpoint.health.show-details=always
+
+# Resilience4j Circuit Breaker configuration
+resilience4j.circuitbreaker.instances.employee-service.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.employee-service.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.employee-service.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.employee-service.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.employee-service.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.employee-service.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.employee-service.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.employee-service.slidingWindowType=COUNT_BASED
+
 spring.rabbitmq.username=nova81
 spring.rabbitmq.password=Aadhi@123
 
