--- a/employee-service.properties
+++ b/employee-service.properties
@@ -23,11 +23,7 @@ eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
 #Expose required actuator endpoints
-management.endpoints.web.exposure.include=refresh,shutdown,busrefresh
-management.endpoint.busrefresh.enabled=true
 
-# Enable shutdown endpoint
-management.endpoint.shutdown.enabled=true
 
 spring.cloud.message= Hello, Employee Service Spring Cloud Bus Demo
 
@@ -45,9 +41,15 @@ spring.rabbitmq.connection-timeout=30000
 # =====================================================
 # Circuit Breaker & Actuator Health Configuration
 # =====================================================
-# Actuator endpoint for Circuit Breaker
+
+# Actuator endpoint for Circuit Breaker & Others
+management.endpoints.web.exposure.include=health,refresh,busrefresh,shutdown
+management.endpoint.busrefresh.enabled=true
+
+# Enable shutdown endpoint
+management.endpoint.shutdown.enabled=true
+# Enable health endpoint
 management.health.circuitbreaker.enabled=true
-management.endpoint.web.exposure.include=health
 management.endpoint.health.show-details=always
 
 # Resilience4j Circuit Breaker configuration
