--- a/employee-service.properties
+++ b/employee-service.properties
@@ -49,7 +49,7 @@ management.endpoint.busrefresh.enabled=true
 # Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
 # Enable health endpoint
-management.health.circuitbreaker.enabled=true
+management.health.circuitbreakers.enabled=true
 management.endpoint.health.show-details=always
 
 # Resilience4j Circuit Breaker configuration
