--- a/employee-service.properties
+++ b/employee-service.properties
@@ -52,6 +52,9 @@ management.endpoint.shutdown.enabled=true
 management.health.circuitbreakers.enabled=true
 management.endpoint.health.show-details=always
 
+# Enable Feign Circuit Breaker
+feign.circuitbreaker.enabled=true
+
 # Resilience4j Circuit Breaker configuration
 resilience4j.circuitbreaker.instances.employee-service.registerHealthIndicator=true
 resilience4j.circuitbreaker.instances.employee-service.failureRateThreshold=50
