Enhance comments for Resilience4j settings in properties
Added detailed comments for Resilience4j Circuit Breaker and Retry settings.

--- a/employee-service.properties
+++ b/employee-service.properties
@@ -55,7 +55,9 @@ management.endpoint.health.show-details=always
 # Enable Feign Circuit Breaker
 feign.circuitbreaker.enabled=true
 
-# Resilience4j Circuit Breaker configuration
+# Resilience4j Circuit Breaker Settings for Employee Service: enables health indicator, sets 50% failure rate threshold,
+# minimum 5 calls, automatic transition from OPEN to HALF_OPEN,
+# wait duration in OPEN state 5s, allows 3 trial calls in HALF_OPEN, sliding window of 10 calls (count-based)
 resilience4j.circuitbreaker.instances.employee-service.registerHealthIndicator=true
 resilience4j.circuitbreaker.instances.employee-service.failureRateThreshold=50
 resilience4j.circuitbreaker.instances.employee-service.minimumNumberOfCalls=5
@@ -64,3 +66,10 @@ resilience4j.circuitbreaker.instances.employee-service.waitDurationInOpenState=5
 resilience4j.circuitbreaker.instances.employee-service.permittedNumberOfCallsInHalfOpenState=3
 resilience4j.circuitbreaker.instances.employee-service.slidingWindowSize=10
 resilience4j.circuitbreaker.instances.employee-service.slidingWindowType=COUNT_BASED
+
+
+# Resilience4j Retry Settings for Employee Service: enables health indicator, sets max 5 retry attempts with 1s wait between retries
+resilience4j.retry.instances.employee-service.registerHealthIndicator=true
+resilience4j.retry.instances.employee-service.maxRetryAttempts=5
+resilience4j.retry.instances.employee-service.waitDuration=1s
+
