--- a/employee-service.properties
+++ b/employee-service.properties
@@ -19,8 +19,11 @@ spring.sleuth.sample.probability=1.0
 
 
 # Eureka client register in the Eureka server
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+# Register this client with the server
+eureka.client.registerWithEureka=true
+# Fetch registry information from the server
+eureka.client.fetchRegistry=true
 
 #Expose required actuator endpoints
 
