Update Eureka client configuration properties

--- a/department-service.properties
+++ b/department-service.properties
@@ -15,9 +15,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.zipkin.base-url=http://127.0.0.1:9411
 spring.sleuth.sample.probability=1.0
 
-#URL Link with Eureka server 
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
+# The URL of the Eureka Server (default port 8761)
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+# Register this client with the server
+eureka.client.registerWithEureka=true
+
+# Fetch registry information from the server
+eureka.client.fetchRegistry=true
 
 spring.cloud.message= Hello, Department Service Spring cloud bus demo
 
