--- a/organization-service.properties
+++ b/organization-service.properties
@@ -11,3 +11,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 server.port=8085
 
+
+# The URL of the Eureka Server (default port 8761)
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+# Register this client with the server
+eureka.client.registerWithEureka=true
+
+# Fetch registry information from the server
+eureka.client.fetchRegistry=true
+
