--- a/organization-service.properties
+++ b/organization-service.properties
@@ -21,3 +21,9 @@ eureka.client.registerWithEureka=true
 # Fetch registry information from the server
 eureka.client.fetchRegistry=true
 
+
+#Expose required actuator endpoints
+management.endpoints.web.exposure.include=refresh,shutdown,busrefresh
+management.endpoint.busrefresh.enabled=true
+# Enable shutdown endpoint
+management.endpoint.shutdown.enabled=true
