--- a/organization-service.properties
+++ b/organization-service.properties
@@ -15,11 +15,12 @@ server.port=8085
 # The URL of the Eureka Server (default port 8761)
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-# Register this client with the server
-eureka.client.registerWithEureka=true
 
-# Fetch registry information from the server
-eureka.client.fetchRegistry=true
+# ===============================
+# Distributed Tracing (Zipkin + Sleuth) Configuration
+# ===============================
+spring.zipkin.default-url=http://localhost:127.0.0.1:8411
+spring.zipkin.
 
 
 #Expose required actuator endpoints
