--- a/organization-service.properties
+++ b/organization-service.properties
@@ -19,8 +19,8 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 # ===============================
 # Distributed Tracing (Zipkin + Sleuth) Configuration
 # ===============================
-spring.zipkin.default-url=http://localhost:127.0.0.1:8411
-spring.zipkin.
+spring.zipkin.base-url=http://127.0.0.1:9411
+spring.sleuth.sample.probability=1.0
 
 
 #Expose required actuator endpoints
