Add RabbitMQ configuration to properties file
Added RabbitMQ configuration for Spring Cloud Bus.

--- a/organization-service.properties
+++ b/organization-service.properties
@@ -28,3 +28,9 @@ management.endpoints.web.exposure.include=refresh,shutdown,busrefresh
 management.endpoint.busrefresh.enabled=true
 # Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
+
+# RabbitMQ for Message Brocker for Spring cloud bus
+spring.rabbitmq.url=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=nova81
+spring.rabbitmq.password=Aadhi@123
