--- a/organization-service.properties
+++ b/organization-service.properties
@@ -15,6 +15,8 @@ server.port=8085
 # The URL of the Eureka Server (default port 8761)
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
+spring.message.organization= Organization, Spring Cloud Bus 
+
 
 # ===============================
 # Distributed Tracing (Zipkin + Sleuth) Configuration
