--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -30,6 +30,12 @@ eureka.cloud.gateway.routes[2].pedicates[0]=Path:/api/organization/**
 # The URL of the Eureka Server (default port 8761)
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
+# Spring Cloud Bus Message Brocker RabbitMQ
+spring.rabbitmq.url=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=nova81
+spring.rabbitmq.password=Aadhi@123
+
 ## ==============================
 ## LOGGING
 ## ==============================
