--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -22,7 +22,7 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/department/**
 # Organization Service ROUTE
 eureka.cloud.gateway.routes[2].id=organization-service
 eureka.cloud.gataway.routes[2].uri=lb://ORGANIZATION-SERVICE
-eureka.cloud.gateway.routes[2].pedicates[0]=Path:/api/organization/**
+eureka.cloud.gateway.routes[2].pedicates[0]=Path=/api/organization/**
 
 ## ==============================
 ## EUREKA CLIENT
