--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -31,7 +31,7 @@ eureka.cloud.gateway.routes[2].pedicates[0]=Path=/api/organization/**
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 # Spring Cloud Bus Message Brocker RabbitMQ
-spring.rabbitmq.url=localhost
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=nova81
 spring.rabbitmq.password=Aadhi@123
