--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -36,6 +36,10 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=nova81
 spring.rabbitmq.password=Aadhi@123
 
+# Expose required actuator endpoints
+management.endpoints.web.exposure.include=refresh,shutdown,busrefresh
+management.endpoint.busrefresh.enabled=true
+
 ## ==============================
 ## LOGGING
 ## ==============================
