--- a/organization-service.properties
+++ b/organization-service.properties
@@ -33,7 +33,7 @@ management.endpoint.busrefresh.enabled=true
 management.endpoint.shutdown.enabled=true
 
 # RabbitMQ for Message Brocker for Spring cloud bus
-spring.rabbitmq.url=localhost
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=nova81
 spring.rabbitmq.password=Aadhi@123
