--- a/organization-service.properties
+++ b/organization-service.properties
@@ -37,3 +37,5 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=nova81
 spring.rabbitmq.password=Aadhi@123
+
+spring.rabbitmq.connection-timeout=30000
