--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -20,9 +20,9 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/department/**
 #spring.cloud.gateway.mvc.routes[1].filters[0]=StripPrefix=2
 
 # Organization Service ROUTE
-eureka.cloud.gateway.routes[2].id=organization-service
-eureka.cloud.gataway.routes[2].uri=lb://ORGANIZATION-SERVICE
-eureka.cloud.gateway.routes[2].pedicates[0]=Path=/api/organization/**
+spring.cloud.gateway.routes[2].id=organization-service
+spring.cloud.gataway.routes[2].uri=lb://ORGANIZATION-SERVICE
+spring.cloud.gateway.routes[2].pedicates[0]=Path=/api/organization/**
 
 ## ==============================
 ## EUREKA CLIENT
