--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -21,7 +21,7 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/department/**
 
 # Organization Service ROUTE
 spring.cloud.gateway.routes[2].id=organization-service
-spring.cloud.gataway.routes[2].uri=lb://ORGANIZATION-SERVICE
+spring.cloud.gateway.routes[2].uri=lb://ORGANIZATION-SERVICE
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organization/**
 
 ## ==============================
