--- a/employee-service.properties
+++ b/employee-service.properties
@@ -21,9 +21,10 @@ spring.sleuth.sample.probability=1.0
 # Eureka client register in the Eureka server
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=false
+
 #Expose required actuator endpoints
-
-
 spring.cloud.message= Hello, Employee Service Spring Cloud Bus Demo
 
 # =====================================================
