--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -29,7 +29,8 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organization/**
 ## ==============================
 # The URL of the Eureka Server (default port 8761)
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=false
 # Spring Cloud Bus Message Brocker RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
