--- a/department-service.properties
+++ b/department-service.properties
@@ -17,6 +17,8 @@ spring.sleuth.sample.probability=1.0
 
 # The URL of the Eureka Server (default port 8761)
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=false
 
 spring.cloud.message= Hello, Department Service Spring cloud bus demo
 
