--- a/organization-service.properties
+++ b/organization-service.properties
@@ -14,7 +14,8 @@ server.port=8085
 
 # The URL of the Eureka Server (default port 8761)
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=false
 # Spring Cloud Bus 
 spring.message.organization= Organization, Spring Cloud Bus 
 
