--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -31,6 +31,7 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organization/**
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=false
+eureka.instance.ip-address=127.0.0.1
 # Spring Cloud Bus Message Brocker RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
