--- a/department-service.properties
+++ b/department-service.properties
@@ -19,6 +19,7 @@ spring.sleuth.sample.probability=1.0
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=false
+eureka.instance.ip-address=127.0.0.1
 
 spring.cloud.message= Hello, Department Service Spring cloud bus demo
 
