--- a/employee-service.properties
+++ b/employee-service.properties
@@ -23,6 +23,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=false
+eureka.instance.ip-address=127.0.0.1
 
 #Expose required actuator endpoints
 spring.cloud.message= Hello, Employee Service Spring Cloud Bus Demo
