--- a/organization-service.properties
+++ b/organization-service.properties
@@ -16,6 +16,7 @@ server.port=8085
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=false
+eureka.instance.ip-address=127.0.0.1
 # Spring Cloud Bus 
 spring.message.organization= Organization, Spring Cloud Bus 
 
