--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -29,9 +29,11 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organization/**
 ## ==============================
 # The URL of the Eureka Server (default port 8761)
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.instance.hostname=localhost
-eureka.instance.prefer-ip-address=false
+eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=127.0.0.1
+eureka.instance.hostname=localhost
+
+
 # Spring Cloud Bus Message Brocker RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
