--- a/department-service.properties
+++ b/department-service.properties
@@ -17,9 +17,9 @@ spring.sleuth.sample.probability=1.0
 
 # The URL of the Eureka Server (default port 8761)
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.instance.hostname=localhost
-eureka.instance.prefer-ip-address=false
+eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=127.0.0.1
+eureka.instance.hostname=localhost
 
 spring.cloud.message= Hello, Department Service Spring cloud bus demo
 
