--- a/employee-service.properties
+++ b/employee-service.properties
@@ -20,10 +20,9 @@ spring.sleuth.sample.probability=1.0
 
 # Eureka client register in the Eureka server
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-
-eureka.instance.hostname=localhost
-eureka.instance.prefer-ip-address=false
+eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=127.0.0.1
+eureka.instance.hostname=localhost
 
 #Expose required actuator endpoints
 spring.cloud.message= Hello, Employee Service Spring Cloud Bus Demo
