--- a/organization-service.properties
+++ b/organization-service.properties
@@ -14,9 +14,9 @@ server.port=8085
 
 # The URL of the Eureka Server (default port 8761)
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.instance.hostname=localhost
-eureka.instance.prefer-ip-address=false
+eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=127.0.0.1
+eureka.instance.hostname=localhost
 # Spring Cloud Bus 
 spring.message.organization= Organization, Spring Cloud Bus 
 
